# PredictStock_AIService

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  ai.py  test.py
app/core/: config.py  cors.py  logging.py
app/llm/chains/: analyze_news_chain.py  stock_prediction_chain.py  stock_sentiment_chain.py
app/llm/models/: llm.py
app/llm/prompts/: stock_prompt.py
app/schemas/: ai.py  candle.py  llm.py
app/services/: ai_service.py  market_service.py  new_service.py
app/utils/: candle_mapper.py  candle_processor.py  date_utils.py  fear_greed.py  news_filter.py
